# action_ch

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/math/: mul.h  mult.h  plus.h  sum.h
src/: main.cpp
